crates/check_cli/tests/snapshots/main_cases_editorconfig/should_use_editorconfig_ci_enabled_from_check_conf.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
snapshot_kind: text
---
## `check.json`

```json
{
  "formatter": {
    "useEditorconfig": true
  }
}
```

## `.editorconfig`

```editorconfig

[*]
indent_style = space
indent_size = 8

```

## `test.js`

```js
console.log("really long string that should cause a break if the line width remains at the default 80 characters");

```

# Termination Message

```block
ci ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
test.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × File content differs from formatting output
  
    1   │ - console.log("really·long·string·that·should·cause·a·break·if·the·line·width·remains·at·the·default·80·characters");
      1 │ + console.log(
      2 │ + ········"really·long·string·that·should·cause·a·break·if·the·line·width·remains·at·the·default·80·characters",
      3 │ + );
    2 4 │   
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
